# AiicyDS

./: .gitignore  .gopmfile  .travis.yml  AiicyDSInitDB.py  CMakeLists.txt  Dockerfile  Gomfile  LICENSE  Makefile  README.md  aiicyds.go  appveyor.yml  bindata.sh  get_dependent.sh  getpkg.sh  graceful_unix.go  graceful_windows.go  install.sh  release_tool.sh  start.sh  studygolang.go
AiicyCMS/: CMakeLists.txt
AiicyCMS/src/: http_response.cpp
cmd/: cmd.go  init.go  web.go
conf/: app.ini
conf/locale/: locale_en-US.ini  locale_zh-CN.ini
config/: db.sql  enn.example.ini  init.sql  setup_root_user.sql
config/locale/: locale_en-US.ini  locale_zh-CN.ini
cppcms-skeleton/: CMakeLists.txt
cppcms-skeleton/cppcms_skel/models/: MySQLModel.cpp  SqlImporter.cpp  SqlImporter.h  Uploads.cpp  Uploads.h
cppcms-skeleton/template/: main.cpp
cppcms-skeleton/template/generics/: Languages.h
cppcms-skeleton/tests/: config.py  config2.py  try_to_build_project.sh
cppcms-skeleton/tools/: init.py
cppcms_skel/generics/: Config.cpp  Config.h  Languages.h
cppcms_skel/models/: MySQLModel.h  Users.cpp  Users.h
cppdb/: CMakeLists.txt
docker/: README.md  build.sh  start.sh
model/: document.go
models/: action.go  article.go  authority.go  context.go  error.go  image.go  issue_mail.go  like.go  login_source.go  message.go  models.go  morning_reading.go  openproject.go  search_stat.go  topic.go  type.go  user.go  user_mail.go
modules/auth/: auth.go  user_form.go
modules/avatar/: avatar.go  avatar_test.go
modules/base/: base.go
modules/bindata/: bindata.go
modules/context/: auth.go  context.go
modules/controller/: account.go  article.go  base.go  captcha.go  comment.go  favorite.go  image.go  index.go  install.go  like.go  message.go  project.go  reading.go  resource.go  search.go  sidebar.go  topic.go  user.go  websocket.go  wiki.go
modules/http/: http.go
modules/logic/: article.go  authority.go  comment.go  data.go  dynamic.go  email.go  favorite.go  install.go  like.go  message.go  project.go  reading.go  reddit.go  resource.go  rule.go  searcher.go  sitemap.go  topic.go  uploader.go  user.go  view.go  wiki.go
modules/mailer/: mail.go  mailer.go
modules/markdown/: markdown.go  markdown_test.go
modules/middleware/: admin.go  context.go  http_error.go  installed.go  login.go  notice.go  sensitive.go
modules/setting/: setting.go
modules/template/: template.go
modules/user/: user.go
public/: config.codekit
public/css/: css.css  semantic.min.css
public/js/: aiicyds.js
routers/: docs.go  home.go  index.go  install.go  protect.go  search.go
routers/user/: auth.go  home.go  profile.go  setting.go
src/cmd/: cmd.go  web.go
src/models/: comment.go  document.go  dynamic.go  favorite.go  models.go  resource.go  role.go  wiki.go
src/routers/: base.go  captcha.go  favorite.go  home.go  index.go  install.go  (+4 more)
template/: 403.html  404.html  500.html  email.html  favorite.html  index.html  pkgdoc.html  search.html  wr.html
templates/: 403.html  500.html  favorite.html  home.tmpl  index.html  install.tmpl  search.html  wr.html
(+114 files in other folders)
